--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: category) do |form| %>
   <% if category.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(category.errors.count, "error") %> prohibited this category from being saved:</h2>
+    <div id="error_explanation" class="container">
+      <h2 class=""><%= pluralize(category.errors.count, "error") %> prohibited this category from being saved:</h2>
 
       <ul>
         <% category.errors.each do |error| %>
@@ -14,6 +14,11 @@
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
+  </div>
+
+  <div class="field">
+    <%= form.label :feature_in_navbar %>
+    <%= form.check_box :feature_in_navbar %>
   </div>
 
   <div class="actions">
