Add action text to reviews.

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :review %>
-    <%= form.text_area :review %>
+    <%= form.rich_text_area :review %>
   </div>
 
   <div class="field">
