Fixed actions in views.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -51,7 +51,7 @@
         <% end %>
       </h1>
       <div class="container">
-          <%= @game.review %>
+          <%= @post.review %>
       </div>
     </div>
   </div>
