--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,25 +1,7 @@
-<div class="search-container">
-  <%= form_tag(posts_search_path, remote: true) do %>
-    <div class="field">
-        <%= label_tag :category, "Category: " %>
-      
-        <%= select_tag :category, options_from_collection_for_select(
-          @categories.to_a.unshift(Category.new(id: 0, name: "All")),
-          "name",
-          "name",
-          "0") %>
-      
-      <%= select_tag :order, options_for_select([ 
-          "A-Z",
-          "Z-A",
-          "Higest Rating First",
-          "Lowest Rating First",
-          "Newer First",
-          "Oldest First"
-      ]), {include_blank: "Order "} %>
-      <%= submit_tag "Search" %>
+<div class="container">
+  <div class="container">
+    <%= render 'posts/search_by' %>
   </div>
-  <% end %>
 </div>
 
 <div class="container">
