--- a/app/views/posts/_categories.html.erb
+++ b/app/views/posts/_categories.html.erb
@@ -1,11 +1,16 @@
-<div id="category">
-  <% @posts.each do |post| %>
-    <% if post.image.attached? %>
-        <%= link_to image_tag(post.resized_image, class:'img-fluid'), post_path(post, category: @category_name, order: @order) %>
-      <% else %>
-    <div style="width: 220px; height: 435px">
-      <%= link_to post.title, post %>
+
+<div class="card my-3">
+    <% @posts.each do |post| %>
+      <% if post.image.attached? %>
+    <div class="card-horizontal">
+        <div class="col-5 img-square-wrapper">
+            <%= link_to image_tag(post.image, class:'card-img-top img-fluid', :size => '260x180'), post_path(post, category: @category_name, order: @order) %>
+        </div>
+        <div class="card-body col-7">
+            <h4 class="card-title"><%= link_to post.title, root_path() %></h4>
+            <p class="card-text"><%= link_to post.review, root_path() %></p>
+        </div>
     </div>
+      <% end %>
     <% end %>
-  <% end %>
 </div>
