--- a/app/views/posts/_search_by.html.erb
+++ b/app/views/posts/_search_by.html.erb
@@ -1,13 +1,13 @@
-<div class="search-container">
+<div class="search-container mb-5">
   <%= form_tag(posts_search_path, remote: true) do %>
-    <div class="field">
-        <%= label_tag :category, "Category: " %>
+    <div class="field text-center">
+        <%= label_tag :category, "Category: ", class: ('mx-auto display-4 bold') %>
       
         <%= select_tag :category, options_from_collection_for_select(
           @categories.to_a.unshift(Category.new(id: 0, name: "All")),
           "name",
           "name",
-          "0") %>
+          "0"), class: 'form-control' %>
       
       <%= select_tag :order, options_for_select([ 
           "A-Z",
@@ -16,8 +16,8 @@
           "Lowest Rating First",
           "Newer First",
           "Oldest First"
-      ]), {include_blank: "Order "} %>
-      <%= submit_tag "Search" %>
+      ]), {include_blank: "Order ", class: 'form-control my-2'} %>
+      <%= submit_tag "Search", class: 'btn btn-primary text-center d-flex mx-auto'%>
   </div>
   <% end %>
 </div>
