--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,9 @@
+
 <div class="container">
-  <div class="container">
-    <%= render 'posts/search_by' %>
+  <div class="row" >
+    <div class="w-50 mx-auto pl-5" >
+      <%= render 'posts/search_by' %>
+    </div>
   </div>
 </div>
 
