--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
-  <div class="container">
+<div class="container bg-white py-5">
+  <div class="container py-5">
     <h1 class="bold px-5 mx-5">New Category</h1>
 
     <%= render 'form', category: @category %>
-    <div class="container mx-5 px-5">
+    <div class="container mx-5 px-5 py-5">
       <%= link_to 'Back', categories_path, class:'ml-3 btn btn-warning' %>
     </div>
   </div>
