--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,5 @@
-
-<div class="container">
-  <div class="row" >
-    <div class="w-50 mx-auto pl-5" >
-      <%= render 'posts/search_by' %>
+<div class="container-fluid px-0">
+    <div class="container">
+      <%= render 'posts/categories', class:'' %>
     </div>
-  </div>
-</div>
-
-<div class="container">
-  <%= render 'posts/categories' %>
 </div>
