--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,34 +1,36 @@
-<div class="container mx-auto">
-  <h1 class="mx-auto">
-    <%= link_to "Categories", root_path, class:'text-dark' %>
-  </h1>
-    <p>Set the Categories that you want to display in the Navbar.</p>
+<div class="container mx-auto bg-white py-5">
+  <div class="container px-auto pl-5">
+    <h1 class="mx-auto">
+      <%= link_to "Categories", root_path, class:'text-dark pl-5' %>
+    </h1>
+      <p class="pl-5 pb-3">Set the Categories that you want to display in the Navbar.</p>
 
-  <% @categories.each do |category| %>
-    <div class="container">
-      <div class="row">
-        <%= form_with(model: category, local: true) do |form| %>
-        <div class="col">
-          <div class="form-group row">
-            <div class="col-4">
-              <%= form.text_field :name, class: 'form-control' %>
-            </div>
-            <div class="col-form-label">
-              <%= form.label "Select this Category", class: 'col-form-label'%>
-            </div>
-            <div class="col">
-              <%= form.check_box :feature_in_navbar, class:'form-control' %>
-            </div>
-            <div class="col">
-              <%= form.submit "Update", class:'btn btn-primary' %>
+    <% @categories.each do |category| %>
+      <div class="container pl-5">
+        <div class="row">
+          <%= form_with(model: category, local: true) do |form| %>
+          <div class="col">
+            <div class="form-group row">
+              <div class="col-4">
+                <%= form.text_field :name, class: 'form-control' %>
+              </div>
+              <div class="col-form-label">
+                <%= form.label "Select this Category", class: 'col-form-label'%>
+              </div>
+              <div class="col">
+                <%= form.check_box :feature_in_navbar, class:'form-control' %>
+              </div>
+              <div class="col">
+                <%= form.submit "Update", class:'btn btn-primary' %>
+              </div>
             </div>
           </div>
-        </div>
-        <% end %>
-        <div class="col">
-          <%= link_to "Delete", category, method: :delete, data: {confirm: "Are you sure that you want to delete the entire Category?"}, class: 'btn btn-danger' %>
+          <% end %>
+          <div class="col">
+            <%= link_to "Delete", category, method: :delete, data: {confirm: "Are you sure that you want to delete the entire Category?"}, class: 'btn btn-danger' %>
+          </div>
         </div>
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
