--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,42 +1,36 @@
-<div class="container pb-5 px-auto">
-  <div class="row d-flex">
-    <div class="container py-5 px-5">
-      <h2 class="text-center pb-3">Settings <%= resource_name.to_s.humanize %></h2>
-      <br>
-      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-        <%= f.error_notification %>
+<div class="container bg-white py-3">
+  <div class="container bg-white w-75">
+    <h2 class="text-center pb-3"><%= resource_name.to_s.humanize %> Settings </h2>
+    <br>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= f.error_notification %>
 
-        <div class="form-inputs">
-          <%= f.input :email, required: true, autofocus: true %>
+      <div class="form-inputs">
+        <%= f.input :email, required: true, autofocus: true %>
 
-          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-            <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-          <% end %>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <% end %>
 
-          <%= f.input :password,
-                      hint: "leave it blank if you don't want to change it",
-                      required: false,
-                      input_html: { autocomplete: "new-password" } %>
-          <%= f.input :password_confirmation,
-                      required: false,
-                      input_html: { autocomplete: "new-password" } %>
-          <%= f.input :current_password,
-                      hint: "we need your current password to confirm your changes",
-                      required: true,
-                      input_html: { autocomplete: "current-password" } %>
-        </div>
+        <%= f.input :password,
+                    hint: "leave it blank if you don't want to change it",
+                    required: false,
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+                    required: false,
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :current_password,
+                    hint: "we need your current password to confirm your changes",
+                    required: true,
+                    input_html: { autocomplete: "current-password" } %>
+      </div>
 
-        <div class="form-actions">
-          <%= link_to "Back", :back, class:'btn btn-warning' %>
-          <%= f.button :submit, "Update", class:'btn btn-primary' %>
-        </div>
-      <% end %>
-    <div>
-    <div class="container py-5">
-      <h3 class="text-danger display-4 bold">Cancel my account</h3><br/>
+      <div class="form-actions">
+        <%= link_to "Back", posts_path, class:'btn btn-warning' %>
+        <%= f.button :submit, "Update", class:'btn btn-primary' %>
+      </div>
+    <% end %>
+      <h3 class="text-danger display-4 bold pt-5">Cancel my account</h3><br/>
       <p class="bold">Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", class:'text-danger bold' }, method: :delete %></p>
-    <div>
-  <div>
-<div>
-<br>
-
+  </div>
+</div>
