--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
-<div class="container pb-5 px-5">
-  <div class="row py-5 px-5">
+<div class="container px-5">
+  <div class="row py-5 px-5 bg-white">
     <div class="container col-6 py-5 px-5">
       <h2>Sign up</h2>
 
@@ -28,8 +28,8 @@
       <%= render "devise/shared/links" %>
     </div>
     
-    <div class="container col-6 h-50">
-      <img src="https://images.pexels.com/photos/5946/books-yellow-book-reading.jpg" class="card-img-top" >
+    <div class="container col-6 h-25">
+      <img src="https://images.pexels.com/photos/5946/books-yellow-book-reading.jpg" class="img-fluid w-75 pl-3 card-img-top" >
     </div>
   </div>
 </div>
