--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,48 +1,52 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand "> <%= render 'layouts/logo', class:"" %> <%= link_to "BookShelve", root_path, class:'navbar-brand bold text-nav ' %> </a>
+    <a class="navbar-brand "> <%= render 'layouts/logo', class:"" %> <%= link_to "The BookShelve", root_path, class:'navbar-brand bold text-nav ' %> </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav pl-5 me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to "Home", root_path, class: "nav-link active bold text-danger" %>
+          <%= link_to "Home", root_path, class: "nav-link active bold home" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "All", posts_path, class: "nav-link bold home" %>
         </li>
           <% @featured.each do |category| %>
         <li class="nav-item">
-          <%= link_to category.name, root_path(category: category.name), class: "nav-link bold text-secondary" %>
+          <%= link_to category.name, posts_path(category: category.name), class: "nav-link bold text-secondary" %>
         </li>
           <% end %>
 
       </ul>
 
       <div class="navbar-nav ml-auto">
-      <% if current_user %>
-      <li class="nav-item dropdown">
-        <a class="nav-link bold dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <%= current_user.username %>
-        </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <% if current_user.admin %>
-            <%= link_to "Create New Post", new_post_path, class: "dropdown-item" %>
-            <%= link_to "Create New Category", new_category_path, class: "dropdown-item" %>
-            <%= link_to "Manage Categories", categories_path, class: "dropdown-item" %>
-          <% end %>
-          <%= link_to "Account Settings", edit_user_registration_path, class: "dropdown-item" %>
-          <div class="dropdown-divider"></div>
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item"%>
-        </div>
-      </li>
-      <% else %>
-      <li class="nav-item">
-        <%= link_to "Log in", new_user_session_path, class:"nav-link mx-1 text-dark bold" %>
-      </li>
-      <h5 class="nav-item pt-2">|</h5>
-      <li class="nav-item">
-        <%= link_to "Sign up", new_user_registration_path, class:"nav-link mx-1 text-dark bold" %>
-      </li>
-      <% end %>
+        <% if current_user %>
+        <li class="nav-item dropdown">
+          <a class="nav-link bold dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <%= current_user.username %>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <% if current_user.admin %>
+              <%= link_to "Create New Post", new_post_path, class: "dropdown-item" %>
+              <%= link_to "Create New Category", new_category_path, class: "dropdown-item" %>
+              <%= link_to "Manage Categories", categories_path, class: "dropdown-item" %>
+            <% end %>
+            <%= link_to "Account Settings", edit_user_registration_path, class: "dropdown-item" %>
+            <div class="dropdown-divider"></div>
+            <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item"%>
+          </div>
+        </li>
+        <% else %>
+        <li class="nav-item">
+          <%= link_to "Log in", new_user_session_path, class:"nav-link mx-1 text-dark bold" %>
+        </li>
+        <h5 class="nav-item pt-2">|</h5>
+        <li class="nav-item">
+          <%= link_to "Sign up", new_user_registration_path, class:"nav-link mx-1 text-dark bold" %>
+        </li>
+        <% end %>
+        <li class="nav-item pt-1"> <%= render 'layouts/search_icon' %> </li>
       </div>
 
     </div>
