--- a/app/views/posts/_carrousel.html.erb
+++ b/app/views/posts/_carrousel.html.erb
@@ -1,10 +1,53 @@
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+<div class="container px-0">
+  <div class="container d-flex">
+    <div id="carouselExampleSlidesOnly" class="carousel-slide px-0 col-8" data-ride="carousel">
+      <div class="carousel-inner container px-0 col-xs-12 ">
+        <div class="carousel-item active px-0 col-12 bg">
+          <img class="img-fluid w-100 grr2" src="https://images.pexels.com/photos/1181671/pexels-photo-1181671.jpeg" width="100vw" height="625" alt="First slide">
+          <div class="carousel-caption">
+            <h1 class="text-danger bold ">The vintage crew rolls into town!</h1>
+            <p class="text-white">Concourse might be a few months from now but that has not stopped the vintage crew from showing of a taste of what is to come in the year 2021</p>
+            <a type="button" class="btnc">See more</a>
+          </div>
+        </div>
+        <div class="carousel-item px-0 col-12 bg">
+          <img class="img-fluid w-100 grr2" src="https://images.pexels.com/photos/1333732/pexels-photo-1333732.jpeg"  width="100vw" height="625" alt="Second slide">
+          <div class="carousel-caption">
+            <h1 class="text-danger bold ">The Federal Income Tax Brackets</h1>
+            <p class="text-white">The federal income tax rates remain unchanged for the 2020 and 2021.</p>
+            <a type="button" class="btnc">See more</a>
+          </div>
+        </div>
+        <div class="carousel-item px-0 col-12 bg">
+          <img class="img-fluid w-100 grr2" src="https://images.pexels.com/photos/279222/pexels-photo-279222.jpeg" width="100vw" height="625" alt="Third slide">
+            <div class="carousel-caption">
+              <h1 class="text-danger bold ">Create your account now!</h1>
+              <p class="text-white">Be part of this community of readers arround the world and recibe updates.</p>
+              <a type="button" class="btnc">See more</a>
+            </div>
+          </div>
+      </div>
     </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <div class="container-fluid col-4 px-0">
+          <img class="img-fluid w-100 grr2" src="https://images.pexels.com/photos/2861798/pexels-photo-2861798.jpeg" width="100vw" height="625" alt="Third slide">
     </div>
   </div>
 </div>
+
+<div class="container-fluid px-0 ">
+  <div class="container d-flex">
+    <div class="container col-3 px-0">
+      <img class="img-fluid w-100 grr3" src="https://hips.hearstapps.com/vader-prod.s3.amazonaws.com/1581097994-41FddZoWzL.jpg" alt="Second slide">
+    </div>
+    <div class="container col-3 px-0">
+      <img class="img-fluid w-100 grr3" src="https://images-na.ssl-images-amazon.com/images/I/81Zj4ibm+hL.jpg" alt="Second slide">
+    </div>
+    <div class="container col-3 px-0">
+      <img class="img-fluid w-100 grr3" src="https://m.media-amazon.com/images/I/81UXVBeuKQL._AC_UY218_.jpg" alt="Second slide">
+    </div>
+    <div class="container col-3 px-0">
+      <img class="img-fluid w-100 grr3" src="https://prodimage.images-bn.com/pimages/9780316556323_p0_v4_s550x406.jpg" alt="Second slide">
+    </div>
+  </div>
+</div>
+
