--- a/app/views/posts/_mini_view.html.erb
+++ b/app/views/posts/_mini_view.html.erb
@@ -1,21 +1,15 @@
 <div class="container-fluid mb-5">
   <div class="card my-3 py-5 mb-5 px-5">
-    <% @posts.each do |post| %>
-      <% if post.image.attached? %>
     <div class="card-horizontal">
         <div class="col-5 img-square-wrapper">
-            <%= link_to image_tag(post.image, class:'card-img-top img-fluid', :size => '260x180'), post_path(post, category: @category_name, order: @order) %>
+            <%= post.image %>
         </div>
         <div class="card-body col-7">
             <h4 class="card-title text-center"><%= link_to post.title, post_path(post) %></h4>
-            <p class="card-text"><%= post.review %></p>
           <div class="container my-5 py-3">
-            <%= link_to 'Read more', post_path(post), class:'btn btn-warning' %>
           </div>
         </div>
     </div>
-      <% end %>
         <div class="container mb-3"></div>
-    <% end %>
   </div>
 </div>
