--- a/app/views/home/_mosaic.html.erb
+++ b/app/views/home/_mosaic.html.erb
@@ -43,7 +43,7 @@
       
       <div class="border-0 col-3 px-0  bg-white">
         <div class="px-3 bg-white">
-          <p class="bold txt text-decoration">MISTERY</p>
+          <p class="bold txt text-decoration pt-3">MISTERY</p>
           <p class="bold txt-cards text-dark text-decoration">A Cosmology of Monsters</p>
           <p class="text-dark text-center">H.P. Lovecraft meets Stephen King in this spooky debut novel about a family of haunted house proprietors who are haunted across generations by monsters—and not the hokey jump-scare kind. Hamill has crafted an ambitious, spellbinding horror novel for the ages, one where the looming specters of ambition, obsession, and loss are every bit as terrifying as the flesh-and-blood monsters themselves.</p>
         </div>
