--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,15 +1,15 @@
-<div class="container-fluid">
-  <%= render 'posts/carrousel' %>
+<div class="container-fluid px-0">
+  <%= render 'home/carrousel' %>
 </div>
 
 <div class="container-fluid px-0 pt-4">
     <div class="container">
-      <%= render 'posts/video', class:'' %>
+      <%= render 'home/video', class:'' %>
     </div>
 </div>
 
 <div class="container-fluid px-0">
     <div class="container">
-      <%= render 'posts/mosaic', class:'' %>
+      <%= render 'home/mosaic', class:'' %>
     </div>
 </div>
