Work on rubocop fixed syntax issues.

--- a/app/views/home/_carrousel.html.erb
+++ b/app/views/home/_carrousel.html.erb
@@ -5,18 +5,18 @@
         
         <div class="carousel-item active px-0 col-12 bg">
           <div class="carousel-caption">
-            <h1 class="head bold ">The vintage crew rolls into town!</h1>
-            <p class="text-white">Concourse might be a few months from now but that has not stopped the vintage crew from showing of a taste of what is to come in the year 2021</p>
-            <a type="button" class="btnc">See more</a>
+            <h1 class="head bold ">Python for everbody</h1>
+            <p class="text-white">Python for Everybody is designed to introduce students to programming and software development through the lens of exploring data.</p>
+            <%= link_to 'Explore more', posts_path, class:'btnc' %>
           </div>
           <img class="img-fluid w-100 divs imgc" src="https://images.pexels.com/photos/1181671/pexels-photo-1181671.jpeg" width="100vw" height="625" alt="First slide">
         </div>
 
         <div class="carousel-item px-0 col-12 bg">
           <div class="carousel-caption">
-            <h1 class="head bold ">The Federal Income Tax Brackets</h1>
-            <p class="text-white">The federal income tax rates remain unchanged for the 2020 and 2021.</p>
-            <a type="button" class="btnc">See more</a>
+            <h1 class="head bold ">The BookShelve Readers</h1>
+            <p class="text-white">Reading has a significant number of benefits, and here’re 10 benefits of reading to get you to start reading. Explore best seller books only there in The BookShelve.</p>
+            <%= link_to 'Explore more', posts_path, class:'btnc' %>
           </div>
           <img class="img-fluid w-100 divs imgc" src="https://images.pexels.com/photos/1333732/pexels-photo-1333732.jpeg"  width="100vw" height="625" alt="Second slide">
         </div>
@@ -26,7 +26,7 @@
             <div class="carousel-caption">
               <h1 class="head bold ">Create your account now!</h1>
               <p class="text-white">Be part of this community of readers arround the world and recibe updates.</p>
-              <a type="button" class="btnc">See more</a>
+              <%= link_to "Here", new_user_registration_path, class:"btnc" %>
             </div>
             <img class="img-fluid w-100 divs imgc" src="https://images.pexels.com/photos/279222/pexels-photo-279222.jpeg" width="100vw" height="625" alt="Third slide">
           </div>
@@ -34,7 +34,7 @@
 
     </div>
       <div class="container-fluid col-4 px-0">
-          <img class="img-fluid w-100" src="https://images.pexels.com/photos/2861798/pexels-photo-2861798.jpeg" width="100vw" height="625" alt="Third slide">
+          <img class="img-fluid w-100 imgc" src="https://images.pexels.com/photos/2861798/pexels-photo-2861798.jpeg" width="100vw" height="625" alt="Third slide">
     </div>
   </div>
 </div>
