--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <body>
     
     <%= render 'layouts/navbar' %>
-    <%= render 'layouts/alerts' if !flash.empty? %>
+    <%= render 'layouts/alerts' %>
     
     <%= yield %>
 
