--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,9 +1,17 @@
-<p id="notice"><%= notice %></p>
+<div class="container py-5">
+  <div class="container py-5">
+    <div class="container py-5">
+      <div class="container py-5">
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @category.name %>
-</p>
+  <p>
+    <strong>Name:</strong>
+    <%= @category.name %>
+  </p>
 
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
+  <%= link_to 'Edit', edit_category_path(@category) %> |
+  <%= link_to 'Back', categories_path %>
+</div>
+</div>
+</div>
+</div>
