--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container px-5">
+<div class="container px-5 py-5">
   <div class="row py-5 px-5 bg-white">
     <div class="container col-6 py-5 px-5">
       <h2>Sign up</h2>
