--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,13 +1,16 @@
-<div class="container">
     <% if flash[:notice] %>
-        <div class="notification is-primary global-notification">
-            <p class="notice"><%= notice %></p>
+        <div class="alert alert-success">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <%= flash[:notice] %>
+        </div>
+    <% elsif flash[:error] %>    
+        <div class="alert alert-error">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <%= flash[:error] %>
+        </div>
+    <% elsif flash[:alert] %>    
+        <div class="alert alert-warning">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <%= flash[:alert] %>
         </div>
     <% end %>
-
-    <% if flash[:alert] %>
-        <div class="notification is-danger global-notification">
-            <p class="alert"><%= alert %></p>
-        </div>
-    <% end %>
-</div>
