--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,9 +23,9 @@ body {
 
 footer {
     background-color: #1a1f24;
-    position: sticky;
     bottom: 0;
     left: 0;
+    position: fixed;
     width: 100vw;
     z-index: 100;
 }
