--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -42,7 +42,7 @@
         <div class="form-group">
           <%= form.label :image, class:'bold' %>
         <br>
-          <%= form.file_field :image, class:'form-control-file' %>
+          <%= form.file_field :image, class:'form-control-file', data: { 'form-data' => (@s3_direct_post.fields), 'url' => @s3_direct_post.url, 'host' => URI.parse(@s3_direct_post.url).host } %>
         </div>
       </div>
       <div class="container mt-5">
