Add api to cloudinary activestorage and fixed some issues generated on file field rules.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,7 @@ body {
 
 footer {
     background-color: #1a1f24;
-    position: fixed;
+    position: block;
     bottom: 0;
     left: 0;
     width: 100vw;
