--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container bg-white my-5 py-5 rounded">
   <div class="row">
     <div class="col-4 pl-5">
-      <%= image_tag(@post.image_url, class:'img-fluid') if @post.image %>
+      <%= image_tag(@post.image, class:'img-fluid') if @post.image %>
       <div class="row">
         <div class="col-12 ml-4 pl-4 pt-2">
             <h4 class="">
