--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -42,7 +42,7 @@
         <div class="form-group">
           <%= form.label :image, class:'bold' %>
         <br>
-          <%= form.file_field :image, class:'form-control-file' %>
+          <%= form.file_field :image, class:'form-control-file', direct_upload: true  %>
         </div>
       </div>
       <div class="container mt-5">
