Fixed issues with style in he footer section.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,8 @@ body {
 
 footer {
     background-color: #1a1f24;
-    position: block;
+    position: fixed;
+    margin-top: 50px;
     bottom: 0;
     left: 0;
     width: 100vw;
