Add more characters to review.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -54,7 +54,9 @@
             <% end %>
           </h1>
           <div class="container">
-            <%= @post.review %>
+            <div class="container mx-auto">
+              <%= @post.review %>
+            </div>
           </div>
         </div>
       </div>
