Fixed issues in home view, margin bottom between mosaic and footer

--- a/app/views/home/_mosaic.html.erb
+++ b/app/views/home/_mosaic.html.erb
@@ -1,5 +1,5 @@
-<div class="container mt-4">
-  <div class="container-fluid px-0 py-0">
+<div class="container my-4">
+  <div class="container-fluid px-0 py-3">
     <div class ="px-0 my-0 d-flex col-12">
       
       <div class="image col-3 px-0">
@@ -28,7 +28,7 @@
 
     </div>
 
-    <div class ="px-0 my-0 d-flex col-12">
+    <div class ="px-0 my-0 d-flex col-12 mb-5">
       <div class="border-0 col-3 px-0 bg-white">
         <div class="border-0 px-3 py-3 bg-white">
           <p class="bold txt text-decoration">ROMANCE</p>
