--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container-fluid px-0">
-    <div class="container">
-      <%= render 'posts/categories', class:'' %>
+<div class="container-fluid px-0 pb-2">
+    <div class="container pb-3">
+      <%= render 'posts/categories', class:'pb-3' %>
     </div>
 </div>
