--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,9 @@
-<div class="bg-secondary py-5 mb-5">
+<div class="container bg-secondary">
   <div class="bg-secondary">
     <div class="container bg-white rounded">
         <div class="container">
           <div class="container">
-            <div class="ml-5 pt-3">
+            <div class="cantainer">
               <h1 class="bold ml-4 pl-3 display-4">New Post</h1>
             </div>
             <%= render 'form', post: @post %>
