--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container bg-white my-5 py-5 rounded">
+<div class="container bg-white mb-5 ">
   <div class="row">
     <div class="col-4 pl-5">
       <%= image_tag(@post.image, class:'img-fluid') if @post.image %>
