--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,15 +1,15 @@
 <div class="container mx-auto bg-white py-5">
   <div class="container px-auto pl-5">
-    <h1 class="mx-auto">
-      <%= link_to "Categories", root_path, class:'text-dark pl-5' %>
+    <h1 class="text-center">
+      <%= link_to "Categories", root_path, class:'bold text-dark' %>
     </h1>
-      <p class="pl-5 pb-3">Set the Categories that you want to display in the Navbar.</p>
+      <p class="pl-5 pb-3 text-center">Set the Categories that you want to display in the Navbar.</p>
 
     <% @categories.each do |category| %>
-      <div class="container pl-5">
-        <div class="row">
+      <div class="container pl-5 mx-auto w-100">
+        <div class="row ml-5 mr-5 pl-5 pr-5">
           <%= form_with(model: category, local: true) do |form| %>
-          <div class="col">
+          <div class="col ml-5 mr-5 pl-4 pr-4">
             <div class="form-group row">
               <div class="col-4">
                 <%= form.text_field :name, class: 'form-control' %>
@@ -32,5 +32,8 @@
         </div>
       </div>
     <% end %>
+  </div>
+  <div class="container-fluid ml-5 pl-5 mr-5 pr-5 text-center mb-4 mt-2">
+    <%= link_to 'Back to Posts', posts_path, class:'ml-3 btn btn-warning btn-lg' %>
   </div>
 </div>
