--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container px-5 py-5">
   <div class="row py-5 px-5 bg-white">
-    <div class="container col-6 py-5 px-5">
-      <h2>Sign up</h2>
+    <div class="container col-6 py-5 mt-5 pt-5">
+      <h2 class="text-center pb-4 bold">Sign up</h2>
 
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
@@ -21,15 +21,17 @@
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Sign up", class: 'btn btn-primary mb-3' %>
+          <%= f.button :submit, "Sign up", class: 'btn btn-success mb-3' %>
         </div>
       <% end %>
 
       <%= render "devise/shared/links" %>
     </div>
     
-    <div class="container col-6 h-25">
-      <img src="https://images.pexels.com/photos/5946/books-yellow-book-reading.jpg" class="img-fluid w-75 pl-3 card-img-top" >
+    <div class="container-fluid h-25 col-6 pl-2 pr-2">
+      <div class="row pl-2 pr-2">
+        <img src="https://images.pexels.com/photos/5946/books-yellow-book-reading.jpg" class="img-fluid w-100 mr-5 pl-1 pr-1 card-img-top" >
+      </div>
     </div>
   </div>
 </div>
