Updated a tags to hrefs in heroku.

--- a/app/views/home/_carrousel.html.erb
+++ b/app/views/home/_carrousel.html.erb
@@ -42,16 +42,24 @@
 <div class="container-fluid px-0 ">
   <div class="container-fluid px-0 d-flex">
     <div class="container col-3 px-0">
-      <img class="img-fluid w-100 imgc1" src="https://hips.hearstapps.com/vader-prod.s3.amazonaws.com/1581097994-41FddZoWzL.jpg" alt="Second slide">
+      <a href="https://thebookshelve.herokuapp.com/posts/14">
+        <img class="img-fluid w-100 imgc1" src="https://hips.hearstapps.com/vader-prod.s3.amazonaws.com/1581097994-41FddZoWzL.jpg" alt="Second slide">
+      </a>
     </div>
     <div class="container col-3 px-0">
-      <img class="img-fluid w-100 imgc1" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1568743976l/46064076._SY475_.jpg" alt="Second slide">
+      <a href="https://thebookshelve.herokuapp.com/posts/17">
+        <img class="img-fluid w-100 imgc1" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1568743976l/46064076._SY475_.jpg" alt="Second slide">
+      </a>
     </div>
     <div class="container col-3 px-0">
-      <img class="img-fluid w-100 imgc1" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1465761302l/28257707.jpg" alt="Second slide">
+      <a href="https://thebookshelve.herokuapp.com/posts/18">
+        <img class="img-fluid w-100 imgc1" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1465761302l/28257707.jpg" alt="Second slide">
+      </a>
     </div>
     <div class="container col-3 px-0">
-      <img class="img-fluid w-100 imgc1" src="https://prodimage.images-bn.com/pimages/9780316556323_p0_v4_s550x406.jpg" alt="Second slide">
+      <a href="https://thebookshelve.herokuapp.com/posts/19">
+        <img class="img-fluid w-100 imgc1" src="https://prodimage.images-bn.com/pimages/9780316556323_p0_v4_s550x406.jpg" alt="Second slide">
+      </a>
     </div>
   </div>
 </div>
