--- a/app/views/home/_mosaic.html.erb
+++ b/app/views/home/_mosaic.html.erb
@@ -3,7 +3,7 @@
     <div class ="px-0 my-0 d-flex col-12">
       
       <div class="image col-3 px-0">
-          <a href="#"><img class="img" src="https://hips.hearstapps.com/vader-prod.s3.amazonaws.com/1573232834-4168N2DeHVL.jpg" alt="Card image cap"></a>
+          <a href="https://thebookshelve.herokuapp.com/posts/20"><img class="img" src="https://hips.hearstapps.com/vader-prod.s3.amazonaws.com/1573232834-4168N2DeHVL.jpg" alt="Card image cap"></a>
       </div>
       
       <div class="col-3 px-0 py-0 bg-white">
@@ -15,7 +15,7 @@
       </div>
 
       <div class="image col-3 px-0">
-        <a href="#"><img class="img" src="https://hips.hearstapps.com/vader-prod.s3.amazonaws.com/1576103014-51pQbLT0AiL.jpg" alt="Card image cap"></a>
+        <a href="https://thebookshelve.herokuapp.com/posts/21"><img class="img" src="https://hips.hearstapps.com/vader-prod.s3.amazonaws.com/1576103014-51pQbLT0AiL.jpg" alt="Card image cap"></a>
       </div>
 
       <div class="border-0 col-3 px-0  bg-white">
@@ -38,7 +38,7 @@
       </div>
       
       <div class="image col-3 px-0">
-          <a href="#"><img class="img" src="https://hips.hearstapps.com/vader-prod.s3.amazonaws.com/1576102875-41-mJjyo0VL.jpg" alt="Card image cap"></a>
+          <a href="https://thebookshelve.herokuapp.com/posts/22"><img class="img" src="https://hips.hearstapps.com/vader-prod.s3.amazonaws.com/1576102875-41-mJjyo0VL.jpg" alt="Card image cap"></a>
       </div>
       
       <div class="border-0 col-3 px-0  bg-white">
@@ -50,7 +50,7 @@
       </div>
 
       <div class="image col-3 px-0">
-        <a href="#"><img class="img" src="https://hips.hearstapps.com/vader-prod.s3.amazonaws.com/1573232935-51nXVbkq76L.jpg" alt="Card image cap"></a>
+        <a href="https://thebookshelve.herokuapp.com/posts/23"><img class="img" src="https://hips.hearstapps.com/vader-prod.s3.amazonaws.com/1573232935-51nXVbkq76L.jpg" alt="Card image cap"></a>
       </div>
 
 
