--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container bg-white mb-5 ">
   <div class="row">
-    <div class="col-4 pl-5">
+    <div class="col-4 pl-5 pt-3">
       <%= image_tag(@post.image, class:'img-fluid') if @post.image %>
       <div class="row">
         <div class="col-12 ml-4 pl-4 pt-2">
@@ -37,7 +37,8 @@
         <div class="btn-group my-3">
           <%= link_to "Back", posts_path, class: 'btn btn-primary mx-1 rounded' %>
           <%= link_to "Edit", edit_post_path(@post), class: 'btn btn-warning mx-1 rounded' %>
-          <%= link_to "Delete", @post, method: :delete, class: 'btn btn-danger mx-1 rounded' %>
+          <%= link_to "Delete", @post, method: :delete, data: {confirm: "Are you sure that you want to delete this Post?"}, class: 'btn btn-danger mx-1 rounded' %>
+          
         </div>
         <% end %>
         </div>
