--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,53 +17,54 @@
 @import "actiontext.scss";
 @import "categories.scss";
 @import "posts.scss";
+
 body {
-    background-color: #4e443e;
+  background-color: #4e443e;
 }
 
 footer {
-    background-color: #1a1f24;
-    position: fixed;
-    margin-top: 50px;
-    bottom: 0;
-    left: 0;
-    width: 100vw;
-    z-index: 100;
+  background-color: #1a1f24;
+  position: fixed;
+  margin-top: 50px;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  z-index: 100;
 }
 
 a,
 .head {
-    color: #fd6000;
-    text-decoration: none;
+  color: #fd6000;
+  text-decoration: none;
 }
 
 .txt,
 .time {
-    color: #fd6000;
+  color: #fd6000;
 }
 
 .btnc {
-    border-radius: 8px;
-    padding: 12px 16px;
-    font-size: 16px;
-    color: #FFFFFF;
-    background-color: #fd6000;
-    text-decoration: none;
+  border-radius: 8px;
+  padding: 12px 16px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #fd6000;
+  text-decoration: none;
 }
 
 .imgc {
-    height: 641px;
+  height: 641px;
 }
 
 .imgc1 {
-    height: 500px;
+  height: 500px;
 }
 
 .divs {
-    opacity: 0.5;
+  opacity: 0.5;
 }
 
 .img {
-    height: 448px;
-    width: 270px;
+  height: 448px;
+  width: 270px;
 }
