--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -2,6 +2,10 @@
   <%= render 'home/carrousel' %>
 </div>
 
+<div class="container">
+  <%= render 'home/search_by', class:'pb-3' %>
+</div>
+
 <div class="container-fluid px-0 pt-4">
     <div class="container">
       <%= render 'home/video', class:'' %>
