--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,7 @@
       <%= image_tag(@post.image, class:'img-fluid') if @post.image %>
       <div class="row">
         <div class="col-12 ml-4 pl-4 pt-2">
-          <%= @post.rating %>
+          <h4 class="bold">Rating of:<%= @post.rating, class:'bold' %></h4>
         </div>
         <div class="col-12">
           <h5 class="d-flex mx-1">
