Moved files from home to posts.

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div class="container">
-  <%= render 'home/search_by', class:'pb-3' %>
+ <%= render './posts/search_by', class:'pb-3' %>
 </div>
 
 <div class="container-fluid px-0 pt-4">
