Fixed issue in sortby method in posts controller.

--- a/app/views/posts/_search_by.html.erb
+++ b/app/views/posts/_search_by.html.erb
@@ -14,7 +14,7 @@
           "Z-A",
           "Higest Rating First",
           "Lowest Rating First",
-          "Newer First",
+          "Newest First",
           "Oldest First"
       ]), {include_blank: "Order ", class: 'form-control px-2 ml-2 mt-2'} %>
       <%= submit_tag "Search", class: 'btnc text-center d-flex ml-3 mb-4'%>
