--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,9 +7,9 @@
 
     <% @categories.each do |category| %>
       <div class="container pl-5 mx-auto w-100">
-        <div class="row ml-5 mr-5 pl-5 pr-5">
+        <div class="row ml-5 mr-5 pl-3 pr-3">
           <%= form_with(model: category, local: true) do |form| %>
-          <div class="col ml-5 mr-5 pl-4 pr-4">
+          <div class="col ml-5 mr-5 pl-2 pr-2">
             <div class="form-group row">
               <div class="col-4">
                 <%= form.text_field :name, class: 'form-control' %>
@@ -33,7 +33,8 @@
       </div>
     <% end %>
   </div>
-  <div class="container-fluid ml-5 pl-5 mr-5 pr-5 text-center mb-4 mt-2">
+  <div class="container-fluid mt-3 ml-5 pl-5 mr-5 pr-5 text-center mb-4 mt-2">
     <%= link_to 'Back to Posts', posts_path, class:'ml-3 btn btn-warning btn-lg' %>
+    <%= link_to 'Create New Category', new_category_path, class:'ml-3 btn btn-success btn-lg' %>
   </div>
 </div>
